	geometry; approximations are substituted and warning messages issued.
	Unfortunately, this code is not tested, since I don't have any IES
	files that use these shapes.

Added support for depth-of-field blurring in vwrays using -pd option.
Also, made -c count work with vwrays -i, producing multiple samples
per indicated pixel position.  At the same time, support for the -pd
option was added to rtpict, which calls on vwrays for its samples.

Fixed issue with BSDFs that didn't obey reciprocity, where direct
sampling wasn't following exactly with indirect sampling.  This was
discovered and reported by Jon Sargent.

Created checkBSDF tool to test XML BSDF reciprocity and perform similar
sanity checks.

Added -O option to pvalue and pextrem to report watts/sr/m^2 even if
picture is XYZE.

Made subtle changes to header i/o routines to preserve alignment in
binary file formats to enable memory-mapping.  Implemented memory-mapped
matrix loading in rmtxop for binary double files.

Removed ambient value sorting, which was written when ambient caches
could overwhelm available memory.  This is rarely the case these days,
and the added code complexity and updating of cache values with LRU
counts dirties pages that would otherwise remain clean, so it was
often a loss even when VM was an issue.

Added iso2klems script to compute a Klems BSDF based on specular
and diffuse measurements as a function of incident angle.

Fixed issue with over-counting diffuse component during aBSDF
peak extraction.

Added dctimestep -x and -y options to specify image dimensions
for multiple outputs corresponding to result vectors.

Added -P option to rcalc to pass formatted input when cond is <= 0.

Created rcrop utility for cropping matrices and pictures more
conveniently, correcting view information.  Expect it to be handy
for extracting rows and columns from matrices, mostly.

Changed pcomb so -o option elides original exposure values
from indented source headers.